--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 <body>
     <!--Top Bar -->
     <div class="top-banner ">
-        <div class="top-container">
+        <div class="container-full">
             <div class="small-bold-text banner-text"> New to Usability Hub: Open and Closed card sorting &#128073
 			  <a href="#" class="top-btn">Join Now</a>
                 &#128072
 			</div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="box">
+            <h1>Hello Box Testing</h1>
         </div>
     </div>
 </body>
